fix: horizontal scroll

--- a/src/components/decision-table/dt.scss
+++ b/src/components/decision-table/dt.scss
@@ -3,6 +3,8 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  padding-bottom: 3rem;
+  min-height: 1px;
   //overscroll-behavior: none;
 
   --table-input-color: #5e6476;
